@@ -1,3 +1,9 @@
+TAG: littriageload-6-0-11-3?
+DATE: 12/14/2017
+STAFF: lec
+CHANGES:
+1)TR12708/add Lit Triage Supplemental Journal logic
+
 TAG: littriageload-6-0-11-31
 TAG: littriageload-6-0-11-30
 TAG: littriageload-6-0-11-29
